--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@vee-validate/i18n": "^4.10.6",
     "@vee-validate/rules": "^4.10.6",
     "faunadb": "^4.8.0",
+    "i18n-iso-countries": "^7.6.0",
     "lodash.find": "^4.6.0",
+    "lodash.sortby": "^4.7.0",
     "mongoose": "^7.3.2",
     "nodemailer": "^6.9.3",
     "qrcode": "^1.5.3",
