--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lodash.sortby": "^4.7.0",
     "mongoose": "^7.3.2",
     "nodemailer": "^6.9.3",
+    "nuxt-content-git": "^3.0.32",
     "pinia": "^2.1.4",
     "qrcode": "^1.5.3",
     "telegraf": "^4.12.2",
