--- a/package.json
+++ b/package.json
@@ -28,10 +28,15 @@
     "i18n-iso-countries": "^7.6.0",
     "lodash.camelcase": "^4.3.0",
     "lodash.find": "^4.6.0",
+    "lodash.flatten": "^4.4.0",
+    "lodash.kebabcase": "^4.1.1",
     "lodash.maxby": "^4.6.0",
     "lodash.minby": "^4.6.0",
     "lodash.shuffle": "^4.2.0",
     "lodash.sortby": "^4.7.0",
+    "lodash.startcase": "^4.4.0",
+    "lodash.uniq": "^4.5.0",
+    "lodash.uniqby": "^4.7.0",
     "mongoose": "^7.3.2",
     "nodemailer": "^6.9.3",
     "nuxt-content-git": "^3.0.32",
