--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/i18n": "^8.0.0-beta.12",
     "@sidebase/nuxt-auth": "^0.6.0-beta.3",
     "nuxt": "latest",
+    "nuxt-delay-hydration": "^1.2.1",
     "sass": "^1.63.6",
     "sass-loader": "^13.3.2"
   },
