--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@sidebase/nuxt-auth": "^0.6.0-beta.3",
     "nuxt": "latest",
     "nuxt-delay-hydration": "^1.2.1",
+    "nuxt-simple-robots": "^3.0.3",
     "sass": "^1.63.6",
     "sass-loader": "^13.3.2"
   },
