--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "qrcode": "^1.5.3",
     "telegraf": "^4.12.2",
     "vee-validate": "^4.10.6",
+    "vue3-touch-events": "^4.1.3",
     "whatsapp-web.js": "^1.21.0",
     "wwebjs-mongo": "^1.1.0"
   },
