--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "nuxi build",
     "start": "node .output/server/index.mjs",
     "prod": "nuxi build && nuxi start",
-    "kill": "sudo kill -9 `sudo lsof -t -i:3000`"
+    "kill": "sudo kill -9 `sudo lsof -t -i:3000`",
+    "info": "nuxi info"
   },
   "devDependencies": {
     "@mdi/font": "^7.2.96",
@@ -13,9 +14,10 @@
     "@nuxt/image": "^1.0.0-rc.1",
     "@nuxtjs/i18n": "^8.0.0-beta.12",
     "@sidebase/nuxt-auth": "^0.6.0-beta.3",
-    "nuxt": "latest",
+    "nuxt": "^3.6.5",
     "nuxt-delay-hydration": "^1.2.1",
     "nuxt-simple-robots": "^3.0.3",
+    "nuxt-simple-sitemap": "^3.1.0",
     "sass": "^1.63.6",
     "sass-loader": "^13.3.2"
   },
@@ -51,6 +53,6 @@
     "wwebjs-mongo": "^1.1.0"
   },
   "engines": {
-    "node": "16.x"
+    "node": "18.x"
   }
 }
