--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "i18n-iso-countries": "^7.6.0",
     "lodash.camelcase": "^4.3.0",
     "lodash.find": "^4.6.0",
+    "lodash.findindex": "^4.6.0",
     "lodash.flatten": "^4.4.0",
     "lodash.kebabcase": "^4.1.1",
     "lodash.maxby": "^4.6.0",
