--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "@mdi/font": "^7.2.96",
     "@nuxt/content": "^2.5.2",
     "@nuxt/image": "^1.0.0-rc.1",
+    "@nuxtjs/device": "^3.1.0",
     "@nuxtjs/i18n": "^8.0.0-beta.12",
     "@sidebase/nuxt-auth": "^0.6.0-beta.3",
     "nuxt": "^3.6.5",
     "nuxt-delay-hydration": "^1.2.1",
     "nuxt-simple-robots": "^3.0.3",
-    "nuxt-simple-sitemap": "^3.1.0",
+    "nuxt-simple-sitemap": "^3.1.3",
     "sass": "^1.63.6",
     "sass-loader": "^13.3.2"
   },
@@ -31,6 +32,7 @@
     "faunadb": "^4.8.0",
     "i18n-iso-countries": "^7.6.0",
     "lodash.camelcase": "^4.3.0",
+    "lodash.clonedeep": "^4.5.0",
     "lodash.find": "^4.6.0",
     "lodash.findindex": "^4.6.0",
     "lodash.flatten": "^4.4.0",
