add modal image blur and watermark, still much to fix

--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@pinia/nuxt": "^0.4.11",
     "@vee-validate/i18n": "^4.10.6",
     "@vee-validate/rules": "^4.10.6",
+    "@watermarkify/vue-watermark": "^0.0.3",
     "dayjs": "^1.11.9",
+    "face-api.js": "^0.22.2",
     "faunadb": "^4.8.0",
     "i18n-iso-countries": "^7.6.0",
     "lodash.camelcase": "^4.3.0",
@@ -48,6 +50,7 @@
     "mongoose": "^7.3.2",
     "nodemailer": "^6.9.3",
     "nuxt-content-git": "^3.0.32",
+    "path-browserify": "^1.0.1",
     "pinia": "^2.1.4",
     "qrcode": "^1.5.3",
     "telegraf": "^4.12.2",
