--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "pinia": "^2.1.4",
     "qrcode": "^1.5.3",
     "telegraf": "^4.12.2",
+    "uuid": "^9.0.0",
     "vee-validate": "^4.10.6",
     "vue3-touch-events": "^4.1.3",
     "whatsapp-web.js": "^1.21.0",
