--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node .output/server/index.mjs",
     "prod": "nuxi build && nuxi start",
     "kill": "sudo kill -9 `sudo lsof -t -i:3000`",
-    "info": "nuxi info"
+    "info": "nuxi info",
+    "clean": "nuxi clean"
   },
   "devDependencies": {
     "@mdi/font": "^7.2.96",
@@ -34,6 +35,7 @@
     "i18n-iso-countries": "^7.6.0",
     "lodash.camelcase": "^4.3.0",
     "lodash.clonedeep": "^4.5.0",
+    "lodash.filter": "^4.6.0",
     "lodash.find": "^4.6.0",
     "lodash.findindex": "^4.6.0",
     "lodash.flatten": "^4.4.0",
