--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "dayjs": "^1.11.9",
     "face-api.js": "^0.20.0",
     "faunadb": "^4.8.0",
+    "fs-extra": "^11.1.1",
     "i18n-iso-countries": "^7.6.0",
+    "klaw": "^4.1.0",
     "lodash.camelcase": "^4.3.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.filter": "^4.6.0",
