--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "mongoose": "^7.3.2",
     "nodemailer": "^6.9.3",
     "nuxt-content-git": "^3.0.32",
+    "nuxt-jsonld": "^2.0.8",
     "pinia": "^2.1.4",
     "qrcode": "^1.5.3",
     "telegraf": "^4.12.2",
