--- a/package.json
+++ b/package.json
@@ -23,16 +23,19 @@
     "sass-loader": "^13.3.2"
   },
   "dependencies": {
+    "@auth/fauna-adapter": "^1.0.0",
     "@oruga-ui/oruga-next": "^0.6.0",
     "@oruga-ui/theme-bulma": "^0.2.11",
     "@pinia/nuxt": "^0.4.11",
     "@vee-validate/i18n": "^4.10.6",
     "@vee-validate/rules": "^4.10.6",
+    "bulma-prefers-dark": "^0.1.0-beta.1",
     "dayjs": "^1.11.9",
     "face-api.js": "^0.20.0",
     "faunadb": "^4.8.0",
     "fs-extra": "^11.1.0",
     "i18n-iso-countries": "^7.6.0",
+    "install": "^0.13.0",
     "klaw": "^4.1.0",
     "lodash.camelcase": "^4.3.0",
     "lodash.clonedeep": "^4.5.0",
@@ -53,6 +56,7 @@
     "mitt": "^3.0.1",
     "mongoose": "^7.3.2",
     "nodemailer": "^6.9.3",
+    "npm": "^9.8.1",
     "nuxt-content-git": "^3.0.32",
     "nuxt-jsonld": "^2.0.8",
     "pinia": "^2.1.4",
@@ -62,7 +66,7 @@
     "uuid": "^9.0.0",
     "vee-validate": "^4.10.6",
     "vue3-touch-events": "^4.1.3",
-    "whatsapp-web.js": "^1.21.0",
+    "whatsapp-web.js": "^1.21.1-alpha.1",
     "wwebjs-mongo": "^1.1.0"
   },
   "engines": {
