--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "sass-loader": "^13.3.2"
   },
   "dependencies": {
+    "@nuxt/image": "^1.0.0-rc.1",
     "@oruga-ui/oruga-next": "^0.6.0",
     "@oruga-ui/theme-bulma": "^0.2.11",
     "@pinia/nuxt": "^0.4.11",
