--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "faunadb": "^4.8.0",
     "fs-extra": "^11.1.0",
     "i18n-iso-countries": "^7.6.0",
-    "install": "^0.13.0",
     "klaw": "^4.1.0",
     "lodash.camelcase": "^4.3.0",
     "lodash.clonedeep": "^4.5.0",
@@ -52,22 +51,16 @@
     "lodash.uniq": "^4.5.0",
     "lodash.uniqby": "^4.7.0",
     "mitt": "^3.0.1",
-    "mongoose": "^7.3.2",
     "nodemailer": "^6.9.3",
-    "npm": "^9.8.1",
     "nuxt-content-git": "^3.0.32",
     "nuxt-jsonld": "^2.0.8",
     "pinia": "^2.1.4",
-    "qrcode": "^1.5.3",
-    "telegraf": "^4.12.2",
     "tesseract.js": "^4.1.1",
     "uuid": "^9.0.0",
     "vee-validate": "^4.10.6",
-    "vue3-touch-events": "^4.1.3",
-    "whatsapp-web.js": "^1.21.1-alpha.1",
-    "wwebjs-mongo": "^1.1.0"
+    "vue3-touch-events": "^4.1.3"
   },
   "engines": {
-    "node": "18.x"
+    "node": "16.x"
   }
 }
