--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@pinia/nuxt": "^0.4.11",
     "@vee-validate/i18n": "^4.10.6",
     "@vee-validate/rules": "^4.10.6",
+    "@watermarkify/vue-watermark": "^0.0.3",
     "dayjs": "^1.11.9",
     "faunadb": "^4.8.0",
     "fs-extra": "^11.1.0",
@@ -54,6 +55,7 @@
     "nuxt-content-git": "^3.0.32",
     "nuxt-jsonld": "^2.0.8",
     "pinia": "^2.1.4",
+    "tesseract.js": "^4.1.1",
     "uuid": "^9.0.0",
     "vee-validate": "^4.10.6",
     "vue3-touch-events": "^4.1.3"
