--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxt/content": "^2.5.2",
     "@nuxtjs/device": "^3.1.0",
     "@nuxtjs/i18n": "^8.0.0-beta.12",
+    "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
     "@sidebase/nuxt-auth": "^0.6.0-beta.3",
     "nuxt": "^3.6.5",
     "nuxt-delay-hydration": "^1.2.1",
