--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "nuxt-jsonld": "^2.0.8",
     "nuxt-storage": "^1.2.2",
     "pinia": "^2.1.4",
+    "telegraf": "^4.13.1",
     "tesseract.js": "^4.1.1",
     "uuid": "^9.0.0",
     "vee-validate": "^4.10.6",
