--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "nuxt-content-git": "^3.0.32",
     "nuxt-jsonld": "^2.0.8",
     "nuxt-storage": "^1.2.2",
+    "nuxt-umami": "^2.5.6",
     "pinia": "^2.1.4",
     "telegraf": "^4.13.1",
     "tesseract.js": "^4.1.1",
